replaced person with dinner, configured salad correctly (I hope)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ application.langs="en"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+ evolutionplugin=disabled
 
 # Logger
 # ~~~~~
@@ -45,3 +45,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+dbplugin = disabled
+ehcacheplugin = disabled
