tried to add mongoHQ to config file updated

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,4 +50,4 @@ ehcacheplugin = disabled
 
 
 mongodb.default.db = "food"
-mongodb.uri="mongodb://127.0.0.1:27017/feed-me-app"
+mongodb.uri="mongodb://<user>:<password>@linus.mongohq.com:10023/app14985257"
