created seperate mongoHQ database

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,4 +50,4 @@ ehcacheplugin = disabled
 
 
 mongodb.default.db = "food"
-mongodb.uri="mongodb://<user>:<password>@linus.mongohq.com:10023/app14985257"
+mongodb.uri="mongodb://hoffmeyer:JhFoefi82@dharma.mongohq.com:10009/food"
