added config for mongoHQ

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,5 +48,8 @@ logger.application=DEBUG
 dbplugin = disabled
 ehcacheplugin = disabled
 
-
 mongodb.default.db = "food"
+#mongodb.default.host = "dharma.mongohq.com"
+#mongodb.default.port = 10009
+#mongodb.default.user = "hoffmeyer"
+#mongodb.default.password = "JhFoefi82"
